exports[`auth should return clearUserInfo actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/CLEAR_USERINFO",
}
`;

exports[`auth should return setUserInfo actions 1`] = `
Object {
  "payload": "payload",
  "type": "mcs-lite-mobile-web/auth/SET_USERINFO",
}
`;

exports[`auth should return signin actions 1`] = `
Object {
  "payload": Object {
    "account": "account",
    "password": "password",
  },
  "type": "mcs-lite-mobile-web/auth/SIGNIN",
}
`;

exports[`auth should return signout actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/SIGNOUT",
}
`;
